--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,12 @@
     <string name="note_details_title">Заметка</string>
     <string name="save">Сохранить</string>
     <string name="completed">Выполнение</string>
+    <string name="navigation_drawer_open">open</string>
+    <string name="navigation_drawer_close">close</string>
+    <string name="settings">Week</string>
+    <string name="main">Year</string>
+    <string name="favorite">Month</string>
+    <string name="fragment_navigation">MyMenu</string>
 
 
 </resources>
